# glmi

./: .gitignore  README.md  config.py  pyproject.toml  run.sh  run_experiments.sh  utils.py
experiments/: extract.py  patching.py  probing.py  references.py  rsa.py
scripts/: 01_extract_conceptnet.py  02_extract_wordnet.py  03_extract_bso.py  04_merge_ontology.py  05_generate_nonce_words.py  06_generate_templates.py  07_naturalize_sentences.py  08_validate_stimuli.py  09_build_conditions.py
